# tile-operator

./: .gitignore  LICENSE  README.md  pyproject.toml  to.py
.github/: run_test.yml
tests/: test_sample.py  test_tile_operator.py
tests/data/: sapporo.geojson
tile_operator/: operate.py
