[tool.poetry]
name = "tile-operator"
version = "0.0.5"
description = "Tile Operation tool"
authors = ["nokonoko1203 <nokonoko.1203.777@gmail.com>"]
readme = "README.md"
packages = [{ include = "tile_operator" }]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.12.0"
click = "^8.1.0"
matplotlib = "^3.6.0"
numpy = "^1.23.0"
pillow = "^9.3.0"
rasterio = "^1.3.0"
tqdm = "^4.64.0"
requests = "^2.28.0"
mercantile = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.py$'

exclude = '''
(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | \.vscode
    | \.pytest_cache
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | data
    | contrib
    | output
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = "*/migrations/*.py"
